# playscopa-stress-tester

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: Config.py  StressClient.py  StressEngine.py  client.py  config.py  main.py
