[project]
name = "playscopa-stress-tester"
authors = [
    { name = "bismarckssr" }
]
version = "0.0.1"
description = "Websocket-based stress/load tester for the glorious playscopa.online project"
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiosignal==1.4.0",
    "attrs==25.4.0",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "dotenv==0.9.9",
    "frozenlist==1.8.0",
    "idna==3.11",
    "multidict==6.7.0",
    "propcache==0.4.1",
    "python-dotenv==1.2.1",
    "urllib3==2.5.0",
    "websockets==15.0.1",
    "yarl==1.22.0",
]


[project.urls]
Homepage = "https://playscopa.online/"
Repository = "https://github.com/bismarckssr/playscopa-stress-tester"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff==0.14.6",
]

# Ruff tools

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "RUF"]
ignore = ["E501"]
